Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#306 closed bug (fixed)

Crash in BPrivate::BTokenSpace::RemoveToken()

Reported by: marcusoverhagen Owned by: axeld
Priority: blocker Milestone: R1
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description

Haiku app_server crashed twice today in BPrivate::BTokenSpace::RemoveToken() However, I don't know how to reproduce that.

hrev16769

stack crawl: (nearly impossible to read, Chart keeps drawing over the debugger)

_Rb_tree< [unreadable] BPrivate::BTokenSpace::RemoveToken ViewLayer::DetachedFromWindow WindowLayer::~WindowLayer ServerWindow::~ServerWindow

Change History (7)

comment:1 by axeld, 19 years ago

I had this as well already, I just can't reproduce it at will.

comment:2 by jackburton, 19 years ago

Same here. Happened sometimes when closing some windows (Terminal, mostly).

comment:3 by diver, 19 years ago

Cc: diver added

comment:4 by axeld, 19 years ago

* Bug 479 has been marked as a duplicate of this bug. *

comment:5 by axeld, 19 years ago

Status: newclosed

comment:6 by axeld, 19 years ago

Resolution: fixed

comment:7 by axeld, 19 years ago

Fixed in hrev17198 - the ServerApp could have been deleted before the last WindowLayer.

Note: See TracTickets for help on using tickets.