src/servers/app/ServerApp.cpp
@@ -2468,24 +2468,24 @@ ServerApp::_CreateWindow(int32 code, BPrivate::LinkReceiver& link,
 		status = window->Init(frame, (window_look)look, (window_feel)feel,
 			flags, workspaces);
 		if (status == B_OK && !window->Run()) {
-fprintf(stderr, "ServerApp::_CreateWindow() - failed to run the window thread\n");
+			fprintf(stderr, "ServerApp::_CreateWindow() - failed to run the window thread\n");
 			status = B_ERROR;
 		}
 
-		// add the window to the list
-		if (status == B_OK && fWindowListLock.Lock()) {
-			status = fWindowList.AddItem(window) ? B_OK : B_NO_MEMORY;
-if (status < B_OK)
-fprintf(stderr, "ServerApp::_CreateWindow() - no memory to add window to list\n");
-			fWindowListLock.Unlock();
-		}
-
-		if (status < B_OK) {
+		if (status < B_OK)
 			delete window;
-		}
 	}
 
 	return status;
+}
+
+
+bool
+ServerApp::AddWindow(ServerWindow* window)
+{
+	BAutolock locker(fWindowListLock);
+
+	return fWindowList.AddItem(window);
 }
 
 
